[gd_scene load_steps=6 format=2]

[ext_resource path="res://Internal/Default/Themes/HeaderText.tres" type="Theme" id=1]
[ext_resource path="res://App/Resources/Arcturus_General_Resources/Scripts/HintToConsole.gd" type="Script" id=2]
[ext_resource path="res://Internal/Default/Fonts/RobotoMono/static/RobotoMono-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://App/Resources/Arcturus_General_Resources/Scripts/CommentPanel.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=7]
use_filter = true
font_data = ExtResource( 3 )

[node name="CommentPanel" type="PanelContainer"]
margin_top = 72.0
margin_right = 390.0
margin_bottom = 282.0
rect_pivot_offset = Vector2( -486, -11 )
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 383.0
margin_bottom = 203.0

[node name="IndexLabels" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 376.0
margin_bottom = 22.0

[node name="Spacer" type="Control" parent="VBoxContainer/IndexLabels"]
margin_right = 36.0
margin_bottom = 22.0
rect_min_size = Vector2( 36, 0 )

[node name="Label" type="Label" parent="VBoxContainer/IndexLabels"]
margin_left = 40.0
margin_top = 2.0
margin_right = 336.0
margin_bottom = 20.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Misc"
align = 1

[node name="Hint" type="Label" parent="VBoxContainer/IndexLabels"]
margin_left = 340.0
margin_right = 376.0
margin_bottom = 22.0
rect_min_size = Vector2( 36, 0 )
hint_tooltip = "These fields aren't used by the mod itself but rather as a quality-of-life feature for ini-Writer."
mouse_filter = 1
custom_fonts/font = SubResource( 7 )
text = "?"
align = 1
script = ExtResource( 2 )

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
self_modulate = Color( 0.133333, 0.12549, 0.14902, 1 )
margin_top = 26.0
margin_right = 376.0
margin_bottom = 30.0

[node name="NameContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 376.0
margin_bottom = 86.0

[node name="Label" type="Label" parent="VBoxContainer/NameContainer"]
margin_right = 376.0
margin_bottom = 18.0
theme = ExtResource( 1 )
text = "Name:"

[node name="NameEdit" type="LineEdit" parent="VBoxContainer/NameContainer"]
margin_top = 22.0
margin_right = 376.0
margin_bottom = 48.0
clear_button_enabled = true
placeholder_text = "Optional"

[node name="Spacer" type="Control" parent="VBoxContainer/NameContainer"]
margin_top = 52.0
margin_right = 376.0
margin_bottom = 52.0

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 376.0
margin_bottom = 108.0
theme = ExtResource( 1 )
text = "Comment:"

[node name="CommentEdit" type="LineEdit" parent="VBoxContainer"]
margin_top = 112.0
margin_right = 376.0
margin_bottom = 138.0
clear_button_enabled = true
placeholder_text = "Optional"

[node name="Spacer2" type="Control" parent="VBoxContainer"]
margin_top = 142.0
margin_right = 376.0
margin_bottom = 142.0

[node name="Label3" type="Label" parent="VBoxContainer"]
margin_top = 146.0
margin_right = 376.0
margin_bottom = 164.0
theme = ExtResource( 1 )
text = "Newlines:"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer"]
margin_top = 168.0
margin_right = 376.0
margin_bottom = 192.0
min_value = 1.0
max_value = 5.0
value = 1.0
rounded = true

[node name="Spacer3" type="Control" parent="VBoxContainer"]
margin_top = 196.0
margin_right = 376.0
margin_bottom = 196.0
